2004-10-22  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtktexttag.c: (gtk_text_tag_get_property):
	GdkBitmap is a GObject, not a boxed type.

2004-10-18  Matthias Clasen  <mclasen@redhat.com>

	Fix #155658, Sebastien Bacher:
	
	* gdk/x11/gdkwindow-x11.h (struct _GdkToplevelX11): Add a new 
	is_leader flag.

	* gdk/x11/gdkwindow-x11.c (update_wm_hints): Set wm hints on
	leader windows even if they are withdrawn.
	(gdk_window_set_group): Mark the new leader window as such. We 
	never remove the flag again, but that should a) be vanishingly
	rare and b) not a problem, since the flag just turns off an
	optimization.

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Mark the default
	leader window as such.

2004-10-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcellview.c (gtk_cell_view_get_size_of_row): Restore 
	the size info for the current row after measuring another 
	row.  (#154945, William Jon McCann)

2004-10-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_add_current_folder): 
	Don't leak volume. (#155400, Morten Welinder)

2004-10-13  Crispin Flowerday  <gnome@flowerday.cx>

	* NEWS: Fix a typo in my name (it's Crispin, not Chrispin)

2004-10-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.4.13 ===

	* configure.in: Bump version.

	* gtk/gtkcontainer.c (_gtk_container_queue_resize): Acknowledge 
	the fact that invariants are broken and loop all the way up to 
	the resize container.

	* === Released 2.4.12 ===

Tue Oct 12 17:11:02 2004    <timj@birnet.org>
	
	* gtk/gtkwidget.c (gtk_widget_set_usize_internal): don't queue the
	widget for resize or emit change notification if the usize didn't 
	change. this works around a buggy signal connection in #155139.

2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.4.11 ===

2004-10-08  Matthias Clasen  <mclasen@redhat.com>
