@@ -1,3 +1,10 @@
+2004-10-23  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_size_allocate): Invalidate 
+	the window if the tree is empty, to avoid resizing artifacts
+	from the focus rectangle.  (#155881, Vincent Noel, patch by
+	Billy Biggs)	
+
 2004-10-22  Anders Carlsson  <andersca@gnome.org>
 
 	* gtk/gtktexttag.c: (gtk_text_tag_get_property):
